@@ -1,3 +1,10 @@
+2012-01-??  Francois Vogel  <fvogelnew1@free.fr>
+
+	* generic/tkText.c:      [Bug-1630262]: segfault when deleting lines
+	* generic/tkTextBTree.c  with peer text widgets
+	* generic/tkTextDisp.c
+	* tests/text.test
+
 2012-01-29  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tkImgPhoto.c: [Bug 3480634]: PNG Images missing in menus on Mac
